# Periodo-6

./: README.md
ENGE-2/: CafeDaTarde.rar
ENGE-2/CafeDaTarde/polls/templates/: sidebar.html
ENGE-2/CafeDaTarde/static/css/: sidebar.css
ETT/: prova.py
IA/: Aprendizado de maquina.txt  Itaretive deepening.txt  Problema da satisfacao de restrições.txt  Regrassao linear.txt  csp.py
IA/BCC325_ArtificialIntelligence/2023-2/SourceCode/: agent.py  environment.py
Nova pasta/test/bcc328-alex-example/: lexer.cabal
Nova pasta/tp2-henrique_caio/: README.md
Nova pasta/tp2-henrique_caio/tp2/: tp2.cabal
Nova pasta/tp2-henrique_caio/tp2/app/: Main.hs
Nova pasta/tp2-henrique_caio/tp2/src/Frontend/Lexer/: LangLexer.hs  LangLexer.x
Nova pasta/tp2-henrique_caio/tp2/src/Frontend/Parser/: LangParser.hs  LangParser.info  LangParser.y
Nova pasta/tp2-henrique_caio/tp2/src/Interpreter/: LangInterpreter.hs
Nova pasta/tp2-henrique_caio/tp2/src/Syntax/: Syntax.hs
Nova pasta/tp2-henrique_caio/tp2/test/: factorial.lang  fib.lang  ops.lang
Nova pasta/trabalho-pr-tico-01-analisador-l-xico-henrique_caio/: LICENSE  README.md  TP1.cabal
Nova pasta/trabalho-pr-tico-01-analisador-l-xico-henrique_caio/app/: Main.hs
Nova pasta/trabalho-pr-tico-01-analisador-l-xico-henrique_caio/src/Lexing/: Lexer.hs  Lexer.x
Nova pasta/trabalho-pr-tico-01-analisador-l-xico-henrique_caio/test/: exp.txt
Otimizacao/: ATV_Aula_3.mod  Aula-10.txt  Aula-13.txt  Aula-2.txt  Aula-3.txt  Aula-4.txt  Aula-7.txt  Aula-8.txt  Aula-9.txt
Otimizacao/gusek_0-2-24/Tp/: Covid.mod
bcc328-exemplos/: .gitignore  CHANGELOG.md  README.md  bcc328.cabal  default.nix  package.yaml
bcc328-exemplos/src/Exp/: Exp.hs
bcc328-exemplos/src/Exp/Backend/: Backend.hs
bcc328-exemplos/src/Exp/Frontend/: Frontend.hs
bcc328-exemplos/src/Imp/: Imp.hs
bcc328-exemplos/src/Lexing/: Lexer.hs
bcc328-exemplos/src/Review/: Parsing.hs
bcc328-exemplos/src/Stack/: Stack.hs
(+48 files in other folders)
